--- a/app-front/src/app/note/note.component.scss
+++ b/app-front/src/app/note/note.component.scss
@@ -1,3 +1,14 @@
 .inner-content {
-    padding: 24px;
+    @media screen and (min-device-width : 787px) {
+        padding: 24px;
+    }
+}
+app-note-board{
+    @media screen and (min-device-width : 787px) {
+        padding: 6px 12px 6px 0;
+    }
+} app-note-list {
+    @media screen and (min-device-width : 787px) {
+        padding: 6px 0 6px 12px;
+    }
 }
