--- a/app-front/src/app/profile/profile.component.html
+++ b/app-front/src/app/profile/profile.component.html
@@ -1,6 +1,6 @@
 <div class="inner-content" nz-row nzType="flex" nzJustify="center">
     
-        <h4 nz-title>Atualizar informacoes</h4>
+        <h4 nz-title>Atualizar Informações</h4>
     
         <form
             *ngIf="!updateSuccess" 
