--- a/app-front/src/app/login/form-login/form-login.component.html
+++ b/app-front/src/app/login/form-login/form-login.component.html
@@ -1,21 +1,29 @@
 <form nz-form [formGroup]="loginForm" (ngSubmit)="submitLogin()">
     <nz-form-item>
-        <nz-form-control nzErrorTip="{{ mensagemErro.email }}" nzSuccessTip="Usuário correto" nzHasFeedback>
+        <nz-form-control [nzErrorTip]="errorEmail" [nzSuccessTip]="successEmail" nzHasFeedback>
             <nz-input-group nzPrefixIcon="mail">
                 <input type="email" nz-input formControlName="userEmail" placeholder="Email">
             </nz-input-group>
             
         </nz-form-control>
+        <ng-template #errorEmail let-control>
+            <nz-alert  nzType="error" nzMessage="{{ mensagemErro.email }}"></nz-alert>
+        </ng-template>
+        <ng-template #successEmail let-control>
+            <nz-alert  nzType="success" nzMessage="Usuário válido"></nz-alert>
+        </ng-template>
         <!-- <nz-alert *ngIf="signinForm.get('userEmail').hasError('checkEmail')" nzType="error" nzMessage="Usuário invalido"></nz-alert> -->
     </nz-form-item>
     <nz-form-item>
-        <nz-form-control nzErrorTip="{{ mensagemErro.password }}">
+        <nz-form-control [nzErrorTip]="errorPassword">
             <nz-input-group nzPrefixIcon="lock">
                 <input type="password" nz-input formControlName="userPassword" placeholder="Senha">
             </nz-input-group> 
        </nz-form-control>
         <!-- <nz-alert *ngIf="signinForm.get('userPassword').hasError('incorrect')" nzType="error" nzMessage="Senha Inválida"></nz-alert> -->
-
+        <ng-template #errorPassword let-control>
+            <nz-alert  nzType="error" nzMessage="{{ mensagemErro.password }}"></nz-alert>
+        </ng-template>
     </nz-form-item>
     <nz-form-item>
         <nz-form-control>
