--- a/app-front/src/app/login/form-signin/form-signin.component.html
+++ b/app-front/src/app/login/form-signin/form-signin.component.html
@@ -3,25 +3,32 @@
             <nz-form-control [nzErrorTip]="errorSigninNome" nzHasFeedback>
                 <nz-input-group nzPrefixIcon="user">
                     <input type="text" nz-input formControlName="userName" placeholder="Nome">
-                    <ng-template #errorSigninNome let-control>
-                        <nz-alert nzType="warning" *ngIf="control.hasError('required')" nzMessage="{{ mensagemErro.nome }}"></nz-alert>
-                    </ng-template>
                 </nz-input-group>
+                <ng-template #errorSigninNome let-control>
+                    <nz-alert nzType="warning" *ngIf="control.hasError('required')" nzMessage="{{ mensagemErro.nome }}"></nz-alert>
+                </ng-template>
             </nz-form-control>
         </nz-form-item>
         <nz-form-item>
-            <nz-form-control [nzErrorTip]="errorEmail" [nzWarningTip]="warningEmail">
+            <nz-form-control 
+            [nzErrorTip]="errorEmail" 
+            [nzWarningTip]="warningEmail"
+            >
                 <nz-input-group nzPrefixIcon="mail">
                     <input type="email" nz-input formControlName="userEmail" placeholder="Email">
                 </nz-input-group>
-                <ng-template #errorEmail let-control>
-                    <nz-alert *ngIf="signinForm.get('userEmail').hasError('checkEmail')" nzType="error" nzMessage="Email já utilizado"></nz-alert>
-                </ng-template>
-                <ng-template #warningEmail let-control>
-                    <nz-alert *ngIf="control.hasError('required')" nzType="warning" nzMessage="{{ mensagemErro.email }}"></nz-alert>
-                    <nz-alert *ngIf="control.hasError('email')" nzType="warning" nzMessage="Email Inválido"></nz-alert>
-                </ng-template>
+                
             </nz-form-control>
+            <ng-template #errorEmail let-control>
+                <nz-alert  nzType="error" nzMessage="Email inválido"></nz-alert>
+            </ng-template>
+            <!-- <ng-template #errorEmail let-control>
+                <nz-alert *ngIf="signinForm.get('userEmail').hasError('checkEmail')" nzType="error" nzMessage="Email já utilizado"></nz-alert>
+            </ng-template> -->
+            <ng-template #warningEmail let-control>
+                <nz-alert *ngIf="control.hasError('required')" nzType="warning" nzMessage="{{ mensagemErro.email }}"></nz-alert>
+                <nz-alert *ngIf="control.hasError('email')" nzType="warning" nzMessage="Email Inválido"></nz-alert>
+            </ng-template>
         </nz-form-item>
 
         <div formGroupName="userPassword">
@@ -39,19 +46,22 @@
                 <nz-form-control [nzWarningTip]="passwordRepeatRequire">
                     <nz-input-group nzPrefixIcon="lock">
                         <input type="password" nz-input formControlName="repeat" placeholder="Confirmar a Senha">
+                    </nz-input-group>
                         <ng-template #passwordRepeatRequire let-control>
                             <nz-alert *ngIf="control.hasError('required')" zType="error" nzMessage="Preencha a senha"></nz-alert>
                         </ng-template>
                         <ng-template [ngIf]="signinForm.get('userPassword').hasError('passwordMismatch')">
                             <nz-alert nzType="error" nzMessage="Senha não correspondente"></nz-alert>
                         </ng-template>
-                    </nz-input-group>
                 </nz-form-control>
             </nz-form-item>
         </div>
         <nz-form-item>
             <nz-form-control>
-                <button [disabled]="!signinForm.valid" nz-button [nzType]="'primary'">Sign In</button>
+                <button 
+                [disabled]="!signinForm.valid" 
+                nz-button 
+                [nzType]="'primary'">Sign In</button>
             </nz-form-control>
         </nz-form-item>
         <nz-alert *ngIf="signinSucess !== undefined && signinSucess" nzType="success" nzMessage="Usuário cadastrado com sucesso"></nz-alert>
