--- a/app-front/src/app/note/note-list/note-list.component.html
+++ b/app-front/src/app/note/note-list/note-list.component.html
@@ -1,8 +1,10 @@
 <div>
     <div nzSpan="12">
         <form nz-form [formGroup]="searchForm">
-            <div nz-row>
-                <div nz-col nzSpan="22">
+            <div nz-row [nzGutter]="{ xs: 8, sm: 16, md: 24, lg: 32, xl: 32, xxl: 32 }">
+                <div nz-col 
+                nzXs="24"
+                nzMd="22">
                     <nz-form-item>
                         <nz-form-control>
                             <nz-input-group nzPrefixIcon="search">
@@ -11,7 +13,9 @@
                         </nz-form-control>
                     </nz-form-item>
                 </div>
-                <div nz-col nzSpan="2">
+                <div nz-col 
+                nzXs="24"
+                nzMd="2">
                     <nz-form-item>
                         <nz-form-control>
                             <button nz-button nzType="default" nzShape="circle" (click)="addNewNoteField()"><i nz-icon nzType="plus"></i></button>
