Corrigindo o pipe de search

--- a/app-front/src/app/navbar/navbar.component.html
+++ b/app-front/src/app/navbar/navbar.component.html
@@ -1,8 +1,8 @@
 <nz-page-header nz-row>
 
-        <nz-page-header-title nz-col nzXs="24" nzMd="16">Notes App</nz-page-header-title>  
+        <nz-page-header-title nz-col nzXs="24" nzSm="14">Notes App</nz-page-header-title>  
 
-        <nz-page-header-extra nz-col nzXs="24" nzMd="8" *ngIf="navMenu">
+        <nz-page-header-extra nz-col nzXs="24" nzSm="10" *ngIf="navMenu">
           <button nz-button routerLink="board" >Board</button>
           <button nz-button routerLink="profile" >Profile</button>
           <button nz-button nzType="danger" (click)="logoutUser()">Logout</button>
