Correcao do nova nota e atualizacao de lista

--- a/app-front/src/app/note/note.component.html
+++ b/app-front/src/app/note/note.component.html
@@ -5,8 +5,8 @@
     nzMd="12"
     [user]="userLogged" 
     [activeNote]="activeNote" 
-    (updateListEmmiter)="uploadListNote()"
-    (noteCreatedEmmiter)="changeActiveNote(0)"></app-note-board>
+    (updateListEmmiter)="updateListNote()"
+    (noteCreatedEmmiter)="changeActiveNote()"></app-note-board>
     <app-note-list 
     nz-col 
     nzXs="24"
