--- a/app-front/src/app/note/note.component.scss
+++ b/app-front/src/app/note/note.component.scss
@@ -5,10 +5,10 @@
 }
 app-note-board{
     @media screen and (min-device-width : 768px) {
-        padding: 6px 12px 6px 0;
+        //padding: 6px 12px 6px 0;
     }
 } app-note-list {
     @media screen and (min-device-width : 768px) {
-        padding: 6px 0 6px 12px;
+        //padding: 6px 0 6px 12px;
     } 
 }
