--- a/app-front/src/app/note/note-board/note-board.component.html
+++ b/app-front/src/app/note/note-board/note-board.component.html
@@ -44,6 +44,7 @@
             </nz-form-item >
             <nz-form-item>
                 <button nz-button [disabled]="activeNote != null" (click)="addNewNote()">Nova nota</button>
+                <button nz-button nzType="primary" [disabled]="activeNote == null" (click)="saveNote()"><i nz-icon nzType="save"></i>Salvar</button>
             </nz-form-item>
         </form>
     </div>
