Correcao do CSS das colunas do board

--- a/app-front/src/app/note/note.component.html
+++ b/app-front/src/app/note/note.component.html
@@ -1,4 +1,4 @@
-<div class="inner-content" nz-row nzType="flex" nzJustify="center">
+<div class="inner-content" nz-row nzType="flex" nzJustify="center" nzGutter="16">
     <app-note-board 
     nz-col 
     nzXs="24"
