--- a/app-front/src/app/pages/login/form-login/form-login.component.html
+++ b/app-front/src/app/pages/login/form-login/form-login.component.html
@@ -1,4 +1,4 @@
-<form nz-form [formGroup]="loginForm" (ngSubmit)="submitLogin()">
+<form [formGroup]="loginForm" (ngSubmit)="submitLogin()">
     <nz-form-item>
         <nz-form-control [nzErrorTip]="errorEmail" [nzSuccessTip]="successEmail" nzHasFeedback>
             <nz-input-group nzPrefixIcon="mail">
